crates/audio/src/engine/live/snapshots/audio__engine__live__observation__tests__a_second_skip_inside_a_fade_keeps_two_streams.snap
---
source: crates/audio/src/engine/live/observation.rs
expression: log
---
[
    StartLoad {
        path: "/a",
        speed: Speed(
            1.0,
        ),
    },
    Start {
        volume: 1.0,
        total: Some(
            100s,
        ),
    },
    StartFade {
        path: "/b",
        speed: Speed(
            1.0,
        ),
    },
    Start {
        volume: 0.0,
        total: Some(
            180s,
        ),
    },
    Retire {
        playing: 0.45399055,
        retiring: 0.8910065,
        at: 3s,
    },
    StartFade {
        path: "/c",
        speed: Speed(
            1.0,
        ),
    },
]
