crates/audio/src/engine/live/snapshots/audio__engine__live__observation__tests__a_zero_crossfade_cuts_instead_of_fading.snap
---
source: crates/audio/src/engine/live/observation.rs
expression: log
---
[
    StartLoad {
        path: "/a",
        speed: Speed(
            1.0,
        ),
    },
    Start {
        volume: 1.0,
        total: Some(
            100s,
        ),
    },
    StartLoad {
        path: "/b",
        speed: Speed(
            1.0,
        ),
    },
]
