crates/audio/src/engine/live/snapshots/audio__engine__live__observation__tests__the_configured_crossfade_opens_a_second_sink.snap
---
source: crates/audio/src/engine/live/observation.rs
expression: log
---
[
    StartLoad {
        path: "/a",
        speed: Speed(
            1.0,
        ),
    },
    Start {
        volume: 1.0,
        total: Some(
            100s,
        ),
    },
    PreloadCrossfade {
        path: "/b",
        gain: None,
        speed: Speed(
            1.0,
        ),
    },
    Nothing,
]
