crates/audio/src/engine/live/snapshots/audio__engine__live__observation__tests__the_last_seconds_ramp_both_sinks.snap
---
source: crates/audio/src/engine/live/observation.rs
expression: log
---
[
    StartLoad {
        path: "/a",
        speed: Speed(
            1.0,
        ),
    },
    Start {
        volume: 1.0,
        total: Some(
            100s,
        ),
    },
    PreloadCrossfade {
        path: "/b",
        gain: None,
        speed: Speed(
            1.0,
        ),
    },
    Nothing,
    Send(
        Position(
            89s,
        ),
    ),
    Fade {
        outgoing: 0.70710677,
        incoming: 0.70710677,
        at: 95s,
    },
    Promote {
        volume: 1.0,
    },
]
